# adb_client

./: Cargo.toml
adb_cli/: Cargo.toml
adb_cli/src/: main.rs
adb_cli/src/models/: adb_cli_error.rs  device.rs  mod.rs  opts.rs
adb_client/: Cargo.toml
adb_client/src/: adb_device_ext.rs  error.rs  lib.rs
adb_client/src/message_devices/: adb_message_device.rs  adb_message_device_commands.rs  adb_session.rs  adb_transport_message.rs  message_commands.rs  mod.rs  utils.rs
adb_client/src/message_devices/commands/: mod.rs  shell.rs
adb_client/src/message_devices/tcp/: README.md  adb_tcp_device.rs  tcp_transport.rs
adb_client/src/models/: adb_local_command.rs  mod.rs
