[package]
authors.workspace = true
description = "Rust ADB (Android Debug Bridge) client library"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "adb_client"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
byteorder = { version = "1.5.0" }
log = { version = "0.4.29" }
num_enum = { version = "0.7.5" }
rand = { version = "0.10.0" }
thiserror = { version = "2.0.18" }

[dev-dependencies]
anyhow = { version = "1.0.100" }
